--- a/26_Octave_Filter/electrical/gschem/Makefile
+++ b/26_Octave_Filter/electrical/gschem/Makefile
@@ -13,6 +13,7 @@ SHEETS = \
 	26.006.00.01.01.sch \
 	26.006.00.01.51.sch \
 	26.006.00.01.52.sch \
+	26.006.00.01.53.sch \
 	26.006.01.01.01.sch \
 	26.007.01.01.01.sch \
 	26.008.01.01.01.sch
