--- a/26_Octave_Filter/electrical/gschem/Makefile
+++ b/26_Octave_Filter/electrical/gschem/Makefile
@@ -1,13 +1,14 @@
 PROJNAME = OCTAVE_FILTER
+
 SHEETS = \
+	26.000.00.00.01.sch \
 	26.000.00.01.01.sch \
-	26.001.00.01.01.sch \
-	26.001.00.01.02.sch \
-	26.001.00.01.03.sch \
-	26.001.00.01.04.sch \
-	26.001.00.01.05.sch \
-	26.001.00.01.06.sch \
-	26.001.00.01.07.sch \
+	26.000.00.01.02.sch \
+	26.000.00.01.03.sch \
+	26.000.00.01.04.sch \
+	26.000.00.01.05.sch \
+	26.000.00.01.06.sch \
+	26.000.00.01.07.sch \
 	26.002.00.01.01.sch \
 	26.003.00.01.01.sch \
 	26.006.00.01.01.sch \
@@ -21,17 +22,17 @@ SHEETS = \
 notarget:
 	@echo "Targets:"
 	@echo ""
-	@echo "${MAKE} open           Opens the schematic"
+	@echo "${MAKE} open           Opens the schematic(s)"
 	@echo "${MAKE} attrib         Opens the attribute editor"
 	@echo "${MAKE} renum          Numbers reference designators"
-	@echo "${MAKE} update         Runs gschupdate against the schematic"
+	@echo "${MAKE} update         Runs gschupdate against the schematic(s)"
 	@echo "${MAKE} bom            Creates a bom, 1 line per refdes"
 	@echo "${MAKE} bom2           Creates a bom, 1 line per component type"
-	@echo "${MAKE} drc            Runs a DRC against the schematic"
+	@echo "${MAKE} drc            Runs a DRC against the schematic(s)"
 	@echo "${MAKE} netlist        Generates a gEDA netlist"
 	@echo "${MAKE} pcb            Generates/updates the PCB file (options set in .proj file)"
 	@echo "${MAKE} net-tango      Generates a tango netlist"
-	@echo "${MAKE} pdf       Creates a PDF of the schematics"
+	@echo "${MAKE} pdf            Creates a PDF of the schematic(s)"
 
 open: $(SHEETS)
 	gschem $(SHEETS)
@@ -64,7 +65,7 @@ net-tango: $(SHEETS)
 	gnetlist -g tango -o $(PROJNAME)_tango.net $(SHEETS)
 
 pdf: $(PROJNAME).ps
-	ps2pdf -dOptimize=true -dUseFlateCompression=true -sPAPERSIZE=a4 $< $(PROJNAME)-schematics.pdf
+	ps2pdf -dOptimize=true -dUseFlateCompression=true -sPAPERSIZE=a4 $< plotfiles/$(PROJNAME)-schematics.pdf
 	rm -f $(PROJNAME).ps
 
 $(PROJNAME).ps: printps
