[01] Modified the gschem Makefile.
Signed-off-by: bert <bert.timmerman@xs4all.nl>

--- a/01_Extender/electrical/gschem/Makefile
+++ b/01_Extender/electrical/gschem/Makefile
@@ -52,6 +52,7 @@ net-tango: $(SHEETS)
 
 printpdf: $(PROJNAME).ps
 	ps2pdf -dOptimize=true -dUseFlateCompression=true -sPAPERSIZE=a4 $< $(PROJNAME)-schematics.pdf
+	mv $(PROJNAME)-schematics.pdf ../../documentation
 	rm -f $(PROJNAME).ps
 
 $(PROJNAME).ps: printps
