--- a/50_VLF_Oscilloscope_System/.gitignore
+++ b/50_VLF_Oscilloscope_System/.gitignore
@@ -1,9 +1,4 @@
-.*~
-electrical/gschem/plotfiles
-electrical/gschem/*~
-electrical/gschem/#*#
-electrical/pcb/eyecandy
-electrical/pcb/fab
-electrical/pcb/plotfiles
-mechanical/eyecandy
-mechanical/plotfiles
+*~
+*.bak
+*.log
+
