[50] Added top level schematic to Makefile.
Signed-off-by: bert <bert.timmerman@xs4all.nl>

--- a/50_VLF_Oscilloscope_System/electrical/gschem/Makefile
+++ b/50_VLF_Oscilloscope_System/electrical/gschem/Makefile
@@ -1,6 +1,7 @@
 PROJNAME = 50_VLF_OSCILLOSCOPE_SYSTEM
 SHEETS = \
 	50.000.00.00.01.sch \
+	50.000.00.01.01.sch \
 	50.001.00.01.01.sch \
 	50.001.00.01.02.sch
 
