[01] Updated the Extender pcb bom files.
Signed-off-by: bert <bert.timmerman@xs4all.nl>

--- a/01_Extender/electrical/pcb/Makefile
+++ b/01_Extender/electrical/pcb/Makefile
@@ -12,7 +12,7 @@ notarget:
 bom: $(LAYOUTS)
 	for S in $(LAYOUTS); \
 	do \
-	pcb -x bom --xy-in-mm --bomfile $(PROJNAME).csv $$S; \
+	pcb -x bom --xy-in-mm --bomfile $$S.csv $$S; \
 	done;
 	mv -u *.xy fab/
 	mv -u *.csv fab/
