[26] Ignore less and other files.
Signed-off-by: bert <bert.timmerman@xs4all.nl>

--- a/26_Octave_Filter/.gitignore
+++ b/26_Octave_Filter/.gitignore
@@ -2,13 +2,7 @@
 *.bak
 *.log
 documentation/*.html
-mechanical/eyecandy
-mechanical/plotfiles
-electrical/gschem/BOM
-electrical/gschem/DRC
-electrical/gschem/plotfiles
+electrical/pcb/*-
+electrical/pcb/*~
 electrical/pcb/fab/*.bom
-electrical/pcb/fab/*.cnc
-electrical/pcb/fab/*.gbr
-electrical/pcb/fab/*.xy
-electrical/pcb/plotfiles
+
